[gd_scene load_steps=13 format=2]

[ext_resource path="res://Juego/Naves/EnemigoBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/interceptor_spawn.png" type="Texture" id=2]
[ext_resource path="res://Juego/Naves/nave_interceptor.png" type="Texture" id=3]
[ext_resource path="res://Juego/Naves/EnemigoInterceptor.gd" type="Script" id=4]
[ext_resource path="res://Juego/Proyectiles/ProyectilEnemigo.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Naves/PLayer/PhysicsMaterial.tres" type="PhysicsMaterial" id=6]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 55, 61 )

[sub_resource type="Animation" id=3]
resource_name = "spawn"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteSpawn:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 4, 4 ), Vector2( 2, 2 ), Vector2( 4, 4 ), Vector2( 2, 2 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteSpawn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SpriteSpawn:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.666667 ), Color( 1, 1, 1, 0.501961 ), Color( 1, 1, 1, 0.333333 ), Color( 1, 1, 1, 0.168627 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 960.169

[sub_resource type="CircleShape2D" id=2]
radius = 646.094

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.980392, 1, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.639216, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[node name="EnemigoInterceptor" groups=["minimapa"] instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 15
physics_material_override = ExtResource( 6 )
contacts_reported = 2
contact_monitor = true
script = ExtResource( 4 )
explotions_amount = 1
potencia_max = 800.0

[node name="Sprite" parent="." index="0"]
rotation = -1.5708
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 4 )

[node name="Canion" parent="." index="2"]
position = Vector2( -1.124, 0 )
proyectil = ExtResource( 5 )
cadencia_disparo = 1.2
velocidad_proyectil = 1200

[node name="PuntoIzquierdo" parent="Canion" index="0"]
position = Vector2( 0, -28 )

[node name="PuntoDerecho" parent="Canion" index="1"]
position = Vector2( 0, 28 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
autoplay = "spawn"
anims/spawn = SubResource( 3 )

[node name="SpriteSpawn" type="Sprite" parent="." index="5"]
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )

[node name="AreaDisparo" type="Area2D" parent="." index="6"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDisparo" index="0"]
shape = SubResource( 1 )

[node name="AreaDeteccion" type="Area2D" parent="." index="7"]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDeteccion" index="0"]
shape = SubResource( 2 )

[node name="BarraSalud" parent="." index="8"]
margin_left = -89.0
margin_top = 74.0
margin_right = 59.0
margin_bottom = 88.0
rect_rotation = -90.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
value = 80.0
rounded = true
percent_visible = false

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="AreaDisparo" to="." method="_on_AreaDisparo_body_entered"]
[connection signal="body_exited" from="AreaDisparo" to="." method="_on_AreaDisparo_body_exited"]
[connection signal="body_entered" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_entered"]
[connection signal="body_exited" from="AreaDeteccion" to="." method="_on_AreaDeteccion_body_exited"]

[editable path="Canion"]
